2011-11-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* sope-appserver/NGObjWeb/WOMessage.m (-init): set version to
	"HTTP/1.1" instead of "...1.0".

	* sope-appserver/NGObjWeb/WOResponse.m (-init): set version to
	"HTTP/1.1" instead of "...1.0".

	* sope-appserver/NGObjWeb/WebDAV/SoWebDAVRenderer.m
	(-stringForValue:ofProperty:prefixes:requireTagValue:): don't
	append a space to singletons tags as html clients from the 90's
	are no longer used for anything serious nowadays.

2011-11-25  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* sope-appserver/NGObjWeb/WOHttpAdaptor/WOHttpTransaction.m
	(-deliverResponse:toRequest:onStream:): capitalize header names if
	"WOHTTPAdaptorCapitalizeHeaders" is set.
	(-_reasonForStatus:): improved certain "reasons" for picky clients.

2011-11-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* sope-gdl1/PostgreSQL/NSString+PGVal.m
	(stringValueForPostgreSQLType:attribute:): we don't need to escape
	"\" with postgres.

2011-10-31  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* sope-mime/NGImap4/NGImap4Connection.m
	(-fetchContentOfBodyPart:atURL:withPeek:): new method that enables
	the use of either "BODY" or "BODY.PEEK" as body part prefixes.

2011-10-28  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* sope-mime/NGMime/NGMimeMultipartBody.m (-initWithPart:): removed
	useless constraint on the _part parameter, since it's not even
	used.

2011-10-26  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* sope-mime/NGMail/NGMimeMessage.m (-initWithHeader:): invoke
	"retain" rather than copy on the header hashmap, in order to
	enable further modifications in the client code.

2011-09-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* sope-mime/NGImap4/NGImap4Connection.m: made
	imap4FolderNameForURL: and imap4FolderNameForURL:removeFileName:
	public.

2011-09-04  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* sope-core/NGStreams/NGActiveSocket.m
	(-_unixWriteBytes:count:) - we tell send()
	to not emit any signal such as SIGPIPE. This cause