@@ -106,7 +106,7 @@
   "mt"    = "Maltese";
   "my"    = "Burmese";  
   "na"    = "Nauru";
-  "nb"    = "NorwegianBokmaal";
+  "nb"    = "NorwegianBokmal";
   "ne"    = "Nepali";    
   "nl"    = "Dutch";                           
   "nl-nl" = "Dutch";                           
