@@ -30,7 +30,7 @@
 
 #ifndef SEL_EQ
 #  if GNU_RUNTIME
-#    define SEL_EQ(sel1,sel2) sel_isEqual(sel1,sel2)
+#    define SEL_EQ(sel1,sel2) sel_eq(sel1,sel2)
 #  else
 #    define SEL_EQ(sel1,sel2) (sel1 == sel2)
 #  endif
